@@ -2,6 +2,10 @@
 --------------------
 Maintenance release.
 
+ * qlog:
+   * Disable context menu items (view, annotate, save) for deleted files.
+     (Alexander Belchenko, Bug #1009876)
+
 
 0.21.3 - 2012/04/05
 -------------------
